--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <section>
     <h1>Education</h1>
-    <table style="border: black solid; width: 100px;border-collapse: collapse;">
+    <table style="border: black solid; width: 100%;border-collapse: collapse;">
         <thead>
             <tr style="border: 1px solid black;">
                 <th colspan="4" style="padding: 5px 20px 15px 20px; border: 1px solid black; text-align: center;background-color: rgb(122, 72, 203); color: beige;">Academic Credentials:</th>
