--- a/index.html
+++ b/index.html
@@ -7,117 +7,151 @@
     </head>
 
     <body >
-        <div style="width: 800px; margin: 30px auto; background-color: #b6b5ff; padding: 20px; border: 2px solid #333; border-radius: 10px; text-align: left;">
+        <div style="width: 800px; margin: 30px auto; background-color: #e2e2f6; padding: 20px; border: 2px solid #333; border-radius: 10px; text-align: left;">
 
       <header>
-         <div style="text-align: center;">
-            <img src="hira.jpeg" width="150" height="200">
-            <h1>Hira Mumtaz</h1>
-            <p>Front-End Developer | UI/UX Designer</p>
-        </div>
-      </header>
+  <div style="display: flex; align-items: center; gap: 20px;">
+      
+      <!-- LEFT SIDE IMAGE -->
+      <img src="hira-01.jpg" width="150" height="200" style="border-radius: 5px;">
+
+      <!-- RIGHT SIDE TEXT -->
+      <div>
+        <h1>Hira Mumtaz</h1>
+        <p>Front-End Developer | UI/UX Designer</p>
+      </div>
+
+  </div>
+</header>
 
 <main>
     <hr style="border: 1px solid black; margin: 20px 0;">
 
   <section>
-    <h1 style="color: #ffffff; background-color: #874fef; display: inline-block; border-radius: 5px; padding: 5px 10px;">About Me</h1>
-    <p>I am a passionate UI/UX and front-end developer with experience in creating responsive and user-friendly web interfaces. 
-        I have a strong background in HTML, CSS, JavaScript, and design principles.</p>
+    <h1 style="font-family: poppins; font-size: 30px; display: inline-block;">About Me</h1>
+    <p style="font-family: poppins;">I am a one-woman shop for art and design. I am a creative, responsible, and attentive graphic designer.
+Give me an idea, or a goal you want to meet with a product, and you can be sure I come up with some
+interesting sketches and designs. Give me a deadline, and you can be sure I will meet it.
+.</p>
   </section>
   <hr style="border: 1px solid black; margin: 20px 0;">
+ 
   <section>
-    <h1>Skils</h1>
-    <ul>
-        <li>HTML & CSS (Semantic & Responsive)</li>
-        <li>JavaScript & DOM Manipulation</li>
-        <li>UI/UX Design & Wireframing</li>
-        <li>Front-End Frameworks (Bootstrap, Tailwind)</li>
-
-    </ul>
-  </section>
-
-  <hr style="border: 1px solid black; margin: 20px 0;">
-  
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>UI/UX Design</li>
-    </ul>
-  </section>
-
-  <hr style="border: 1px solid black; margin: 20px 0;">
-
-  <section>
-    <h1>Experience</h1>
-      <h2>Associate Software Engineer - Front-End Developer | MicroMerger</h2>
+    <h1 style="font-family: poppins; font-size: 30px;">Work Experience</h1>
+      <h2 style="font-family: poppins; font-size: 20px;">Associate Software Engineer - Front-End Developer | MicroMerger</h2>
     <P>2025 - Present</P>
    
     <P>Started my career as a front-end developer, working on responsive web design, implementing UI components, 
         and collaborating with UX designers to improve user experienc</P>
 
-        <h2>UI/UX Designer | Freelance</h2>
-        <P>2025 - Present</P>
-   
-    <P>Started my career as a front-end developer, working on responsive web design, implementing UI components, 
-        and collaborating with UX designers to improve user experienc</P>
+        <h2  style="font-family: poppins; font-size: 20px;">Assistant Team Lead, UI/UX Designer, and Graphic Designer</h2>
+        <P>Techodoo-Rawalpindi <br>October 2023 to December 2024 </P>
 
-  </section>
-
-  <hr style="border: 1px solid black; margin: 20px 0;">
+         <section>
+    <ul>
+      <li>Served as an Assistant Team Lead, managing projects and guiding team members to ensure timely delivery of high-quality work.</li>
+      <li>Designed creative and engaging posts for various social media platforms, contributing to enhanced brand visibility and audience engagement.</li>
+      <li> Created animations and visual content for promotional campaigns, elevating the brand's storytellingapproach.</li>
+      <li>Managed the company’s social media accounts, ensuring consistent branding and strategic contentplanning.
+</li>
+    </ul>
+  
+  <hr style=" border: 1px solid black; margin: 20px 0;">
 
   <section>
-    <h1>Education</h1>
+    <h1 style="font-family: poppins; font-size: 30px;">Education</h1>
     <table style="border: black solid; width: 100%;border-collapse: collapse;">
         <thead>
             <tr style="border: 1px solid black;">
-                <th colspan="4" style="padding: 5px 20px 15px 20px; border: 1px solid black; text-align: center;background-color: rgb(122, 72, 203); color: beige;">Academic Credentials:</th>
+                <th colspan="4" style="font-family: poppins; padding: 5px 20px 15px 20px; border: 1px solid black; text-align: center;background-color: rgb(122, 72, 203); color: beige;">Academic Credentials</th>
             </tr>
             <tr>
-                <th style="padding: 5px 20px 15px 20px; border: 1px solid black;">Degre</th>
+                <th style="padding: 5px 20px 15px 20px; border: 1px solid black;">Qualification</th>
                 <th style="padding: 5px 20px 15px 20px; border: 1px solid black;">Percentage</th>
                 <th style="padding: 5px 20px 15px 20px; border: 1px solid black;">Board/University</th>
                 <th style="padding: 5px 20px 15px 20px; border: 1px solid black;">Year</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
                 <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">B.Ed</td>
                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">7%</td>
-                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">ABC University</td>
+                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">Abdul Wali Khan University</td>
                    <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">2023</td>
             </tr>
             <tr>
-                <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">B.Ed</td>
-                 <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">7%</td>
-                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">ABC University</td>
-                   <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">2023</td>
+                <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">BSCS in Computer science</td>
+                 <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">2.3</td>
+                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">Barani Institute of Information Technology.-pakistan</td>
+                   <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">2020</td>
             </tr>
             <tr>
-                <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">B.Ed</td>
-                 <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">7%</td>
-                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">ABC University</td>
-                   <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">2023</td>
+                <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">FSC in ICS</td>
+                 <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">54%</td>
+                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">Orient Girls College Talagang.</td>
+                   <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">2011</td>
             </tr>
+            <tr>
+                <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">Matric in Biology</td>
+                 <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">54%</td>
+                  <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">Government Girls High School No 1 Talagang.-talagang</td>
+                   <td style="padding: 5px 20px 15px 20px; border: 1px solid black;">2010</td>
+            </tr>
+            </tbody>
     </table>
-    <br>
-    <br>
+    <br><br>
   </section>
-   <h1>Contact</h1>
+
+  <hr style="border: 1px solid black; margin: 20px 0;">
+  <section>
+    <h2 style="font-family: poppins; font-size: 30px;">Skills</h2>
+    <ul style="font-family: poppins;">
+      <li>Animations (3 years)</li>
+      <li>Social Media Marketing (5 years)</li>
+      <li>Video Editing (3 years)</li>
+      <li>Graphic Design (5 years)</li>
+      <li>WordPress (3 years)</li>
+    </ul>
+  </section>
+
+   <hr style="border: 1px solid black; margin: 20px 0;">
+  <section>
+    <h2 style="font-family: poppins; font-size: 30px;">Languages</h2>
+
+    <ul style="font-family: poppins;">
+      <li>English - Intermediate</li>
+      <li>Urdu</li>
+    </ul>
+  </section>
+
+  <hr style="border: 1px solid black; margin: 20px 0;">
+  <section>
+    <h2 style="font-family: poppins; font-size: 30px;">Certifications and Licenses</h2>
+    <ol style="font-family: poppins;">
+      <li>Mobile application development (Punjab board of technical education Lahore)</li>
+      <li>social media marketing (Digital Flare)</li>
+      <li>Graphic Designing basic (Digital Flare)</li>
+      <li>Animation Advance (Digital Flare)</li>
+      <li>Wordpress basic (Digital Flare)</li>
+      <li>Animation basic (Digital Flare)</li>
+    </ol>
+  </section>
+
+
+   <h1 style="font-family: poppins; font-size: 30px;">Contact</h1>
    <hr style="border: 1px solid black; margin: 20px 0;">
 
   <footer>
-    <lab>Email:</lab>
-    <input type="text" Email="Email" placeholder="hira@example.com">
-        <br><br>
-    <lab>Phone:</lab>
-    <input type="text" Phone="Phone Number" placeholder="+92 300 1234567">
-        <br><br>
-
-        <lab>LinkedIn:</lab>
-    <input type="text" LinkedIn="LinkedIn" placeholder="linkedin.com/in/hiramumtaz">
-        <br><br>
+    <lab style="font-family: poppins;">Email:hiramalik0711@gmail.com</lab>
+        <br>
+    <lab style="font-family: poppins;">Phone:03350019010</lab>
+        <br>
+        <lab style="font-family: poppins;">LinkedIn:</lab>
+        <a href="https://www.linkedin.com/in/im-hira-mumtaz">www.linkedin.com/in/im-hira-mumtaz</a>
+        <br>
+        <lab style="font-family: poppins;">Portfolio:</lab>
+        <a href="https://www.behance.net/hiramumtaz"> behance.net/hiramumtaz</a>
+        <br>
     
 
   </footer>
