--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ interesting sketches and designs. Give me a deadline, and you can be sure I will
 
     <ul style="font-family: poppins;">
       <li>English - Intermediate</li>
+      <li> Maths</li>
       <li>Urdu</li>
     </ul>
   </section>
