--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ interesting sketches and designs. Give me a deadline, and you can be sure I will
    <h1 style="font-family: poppins; font-size: 20px;">Contact</h1>
    <hr style="border: 1px solid black; margin: 20px 0;">
 
-  <footer>
+  <footer sty>
     <lab style="font-family: poppins;">Email:hiramalik0711@gmail.com</lab>
         <br>
     <lab style="font-family: poppins;">Phone:03350019010</lab>
