--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <div style="width: 800px; margin: 30px auto; background-color: #e2e2f6; padding: 20px; border: 2px solid #333; border-radius: 10px; text-align: left;">
 
       <header>
-  <div style="display: flex; align-items: center; gap: 20px;">
+  <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px;">
       
       <!-- LEFT SIDE IMAGE -->
-      <img src="hira-01.jpg" width="150" height="200" style="border-radius: 5px;">
+      <img src="hira-01.jpg" width="150" height="200" style="border-radius: 5px; max-width: 100%; height: auto;">
 
       <!-- RIGHT SIDE TEXT -->
       <div>
