--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     </head>
 
     <body >
-        <div style="width: 800px; margin: 30px auto; background-color: #e2e2f6; padding: 20px; border: 2px solid #333; border-radius: 10px; text-align: left;">
+        <div style="width: 100%; max-width: 800px;; margin: 30px auto; background-color: #e2e2f6; padding: 20px; border: 2px solid #333; border-radius: 10px; text-align: left;">
 
       <header>
   <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px;">
       
       <!-- LEFT SIDE IMAGE -->
-      <img src="hira-01.jpg" width="150" height="200" style="border-radius: 5px; max-width: 100%; height: auto;">
+      <img src="hira-01.jpg" width="150" height="200" style="border-radius: 5px; max-width:150px; width:100%; height:auto;">
 
       <!-- RIGHT SIDE TEXT -->
       <div>
@@ -60,7 +60,9 @@ interesting sketches and designs. Give me a deadline, and you can be sure I will
 
   <section>
     <h1 style="font-family: poppins; font-size: 20px;">Education</h1>
+    <div style="overflow-x:auto;">
     <table style="border: black solid; width: 100%;border-collapse: collapse;">
+      
         <thead>
             <tr style="border: 1px solid black;">
                 <th colspan="4" style="font-family: poppins; padding: 5px 20px 15px 20px; border: 1px solid black; text-align: center;background-color: rgb(122, 72, 203); color: beige;">Academic Credentials</th>
@@ -100,6 +102,7 @@ interesting sketches and designs. Give me a deadline, and you can be sure I will
             </tbody>
     </table>
     <br><br>
+    </div>
   </section>
 
   <hr style="border: 1px solid black; margin: 20px 0;">
