--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
    <hr style="border: 1px solid black; margin: 20px 0;">
 
   <footer>
-    <lab style="font-family: poppins;">Email:hiramalik0711@gmail.com</lab><br>
-    <lab style="font-family: poppins;">Phone:03350019010</lab><br>
-        <lab style="font-family: poppins;">LinkedIn:</lab>
+    <label style="font-family: poppins;">Email:hiramalik0711@gmail.com</label><br>
+    <label style="font-family: poppins;">Phone:03350019010</label><br>
+        <label style="font-family: poppins;">LinkedIn:</label>
         <a href="https://www.linkedin.com/in/im-hira-mumtaz">www.linkedin.com/in/im-hira-mumtaz</a><br>
-        <lab style="font-family: poppins;">Portfolio:</lab>
+        <label style="font-family: poppins;">Portfolio:</label>
         <a href="https://www.behance.net/hiramumtaz"> behance.net/hiramumtaz</a><br>
     
    </footer>
