section tag was missing

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
       <h2  style="font-family: poppins; font-size: 18px;">Assistant Team Lead, UI/UX Designer, and Graphic Designer</h2>
       <P>Techodoo-Rawalpindi <br>October 2023 to December 2024 </P>
+  </section>
 
   <section>
     <ul>
