add missing tags

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <li> Created animations and visual content for promotional campaigns, elevating the brand's storytellingapproach.</li>
       <li>Managed the company’s social media accounts, ensuring consistent branding and strategic contentplanning.</li>
     </ul>
+  </section>
   
   <hr style=" border: 1px solid black; margin: 20px 0;">
 
